infra/longhorn/base/longhorn-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: longhorn-auth
    namespace: longhorn
spec:
    basicAuth:
        secret: longhorn-auth
