infra/longhorn/base/longhorn-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: longhorn-system
