infra/longhorn/base/longhorn-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: longhorn
    namespace: longhorn-system
spec:
    entryPoints:
        - websecure
    tls:
        secretName: longhorn-tls
